--- a/docs/examples/blog-theme/blog.css
+++ b/docs/examples/blog-theme/blog.css
@@ -20,16 +20,11 @@ h6, .h6 {
 }
 
 
-/*
- * Override Bootstrap's default container.
- */
 
-@media (min-width: 1200px) {
-  .container {
-    width: 680px;
-  }
+.blog-header-img {
+  padding-top: 0;
+  padding-bottom: 0;
 }
-
 
 /*
  * Blog name and description
@@ -56,8 +51,8 @@ h6, .h6 {
  */
 
 .blog-main {
-  font-size: 18px;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 2.0;
 }
 
 
