--- a/docs/examples/blog-theme/blog.css
+++ b/docs/examples/blog-theme/blog.css
@@ -19,10 +19,36 @@ h6, .h6 {
   color: #333;
 }
 
+.post-img-title h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 80px;
+  color: #fff;
+}
+
+.image-bg-fluid-height,
+.image-bg-fixed-height {
+    text-align: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+.image-bg-fluid-height {
+  background: url('images/single-header.png') no-repeat center center scroll;
+  padding: 200px 0;
+}
+
+.image-bg-fixed-height {
+  background: url('http://lorempixel.com/g/1920/500/') no-repeat center center scroll;
+    height: 450px;
+}
+
 
 .social-buttons {
-  position: absolute;
-  margin-top: 20px;
+  float: right;
+  margin-top: -180px;
+  margin-right: 20px;
   font-size: 25px;
   color: #fff;
 }
@@ -39,6 +65,7 @@ h6, .h6 {
   z-index: -1;
   padding-top: 0;
   padding-bottom: 0;
+  margin:0;
 }
 
 /*
@@ -108,7 +135,14 @@ h6, .h6 {
   color: #999;
 }
 
-
+.sign {
+  margin: 0 auto;
+  width: 20%;
+}
+.face {
+  margin: 0 auto;
+  width: 10%;
+}
 /*
  * Footer
  */
